--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "gsap": "^3.13.0",
     "leva": "^0.10.0",
     "r3f-perf": "^7.2.3",
     "react": "^19.1.1",
